3.3/mule-management-console/clusters.adoc
= REST API Reference: Clusters

====== About This Document

This document, as well as the rest of the documents that make up the link:/docs/display/33X/REST+API+Reference[Mule Management Console REST API Reference Guide], are a technical reference only. This document does not provide contextual information such as instructions, use cases or scenarios. To understand this document, you should be familiar with http://www.mulesoft.org/documentation/display/MULE3USER/Home[MULE ESB], Clusters and the link:/docs/display/33X/Using+the+Management+Console+API[REST API].

 Index of operations

[width="99%",cols="20%,16%,16%,16%,16%,16%",]
|===
|*Assumptions:* a|
[width="100%",cols="50%,50%",]
|===
|Host |localhost
|===

 a|
[width="100%",cols="50%,50%",]
|===
|Port |8080
|===

 a|
[width="100%",cols="50%,50%",]
|===
|Deployed app |mmc.war
|===

 a|
[width="100%",cols="50%,50%",]
|===
|User/Password |admin/admin
|===

 | 
|===

For a detailed description of the format used in this document, consult link:/docs/display/33X/REST+API+Reference#RESTAPIReference-ContentOrganizationandConventions[Content Organization and Conventions].

*/api/clusters*

[width="100%",cols="34%,33%,33%",]
|===
a|
*POST*

 a|

===== CREATE

 | 
|===

Creates a new Cluster.

===== Json

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|name |String |Name of the cluster to be created |—
|version |String |Version of the cluster to be created. This must correspond exactly to the version of the agent in the cluster nodes |—
|nodes |Array |List of server IDs that will be assigned to the new cluster. It is required that at least one valid Server ID is supplied |—
|===

===== Using CURL on Windows

----
 curl --basic -u admin:admin -d "{\"name\":\"My Cluster\",\"version\":\"1.0a\", \"nodes\":[\"local$194cdc5b-2253-4f35-b663-b311e4f28956\", \"local$ef85a37f-a3c1-4d1f-b8e6-8fac85d2fca7\"]}" --header "Content-Type: application/json" http://localhost:8080/mmc/api/clusters  
----

===== Using CURL on Linux

----
 curl --basic -u admin:admin -d '{"name":"My Cluster","version":"1.0a", "nodes":["local$194cdc5b-2253-4f35-b663-b311e4f28956", "local$ef85a37f-a3c1-4d1f-b8e6-8fac85d2fca7"]}' --header 'Content-Type: application/json' http://localhost:8080/mmc/api/clusters  
----

===== Json

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|name |String |Name of the created cluster |—
|location |String |Reserved for future usage. Default value: "N/A" |—
|id |String |The ID of the newly created Cluster |—
|version |String |Version of the created cluster |—
|status |String |Displays the total number of nodes and how many of them are online |—
|pausedServices |Integer |Number of paused services on the Cluster |—
|stoppedServices |Integer |Number of stopped services on the Cluster |—
|nodeServerIds |List |List of Server IDs that are the nodes on the Cluster |—
|deployments |List |List of Cluster's deployment IDs. When newly created, this list should be empty |—
|clusterStatus |String |Status of the Cluster (e.g. STOPPED, WAITING_FOR_RESTART, OK) |—
|nodesUpCount |Integer |Number of online nodes |—
|lastRestarted |Integer |Last restart time since epoch |—
|runningServices |Integer |Number of running services on the Cluster |—
|totalServices |Integer |Total number of services on the Cluster |—
|groupIds |List |List group IDs that this Cluster belongs to |—
|===

[width="100%",cols="50%,50%",]
|===
|*201* |The Cluster was created successfully
|*400* |At least one node is not responding/ Malformed Url exception/ Cluster Node Exception/ Some nodes weren't found/ Access Exception/ +
 Policies do not allow adding that cluster/ Nodes to add must be supplied/ A cluster version must be supplied/ A cluster name must be supplied
|*409* |A cluster with that name already exists
|===

[width="100%",cols="100%",options="header",]
|===
|From 3.2.2
|===

 +

[width="100%",cols="34%,33%,33%",]
|===
a|
*GET*

 a|

===== LIST ALL

 a|
link:#Clusters-top[To top ↑]

|===

Lists all managed Clusters.

===== SYNTAX

===== Using CURL

----
 curl --basic -u admin:admin http://localhost:8080/mmc/api/clusters
----

===== JSON

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|total |Integer |Number of managed clusters |—
|data |List |List of managed Cluster details |—
|name |String |Name of the created cluster |data
|location |String |Reserved for future usage. Default value: "N/A" |data
|id |String |The ID of the newly created Cluster |data
|version |String |Version of the created cluster |data
|status |String |Displays the total number of nodes and how many of them are online |data
|pausedServices |Integer |Number of paused services on the Cluster |data
|stoppedServices |Integer |Number of stopped services on the Cluster |data
|nodeServerIds |List |List of Server IDs that are the nodes on the Cluster |data
|deployments |List |List of Cluster's deployment IDs. When newly created, this list should be empty |data
|clusterStatus |String |Status of the Cluster (e.g. STOPPED, WAITING_FOR_RESTART, OK) |data
|nodesUpCount |Integer |Number of online nodes |data
|lastRestarted |Integer |Last restart time since epoch |data
|runningServices |Integer |Number of running services on the Cluster |data
|totalServices |Integer |Total number of services on the Cluster |data
|groupIds |List |List of group IDs that this Cluster belongs to |data
|===

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*400* |Unauthorized user/ Server Down
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

*/api/clusters/\{clusterId}*

[width="100%",cols="34%,33%,33%",]
|===
a|
*GET*

 a|

===== LIST

 a|
link:#Clusters-top[To top ↑]

|===

Lists details for specific Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a cluster |—
|===

===== Using CURL

----
----------------------------------------- curl --basic -u admin:admin http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724    
----
-----------------------------------------

H5. JSON

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|name |String |Name of the created cluster |—
|location |String |Reserved for future usage. Default value: "N/A" |—
|id |String |The ID of the newly created Cluster |—
|version |String |Version of the created cluster |—
|status |String |Displays the total number of nodes and how many of them are online |—
|pausedServices |Integer |Number of paused services on the Cluster |—
|stoppedServices |Integer |Number of stopped services on the Cluster |—
|nodeServerIds |List |List of Server IDs that are the nodes on the Cluster |—
|deployments |List |List of Cluster's deployment IDs. When newly created, this list should be empty |—
|clusterStatus |String |Status of the Cluster (e.g. STOPPED, WAITING_FOR_RESTART, OK) |—
|nodesUpCount |Integer |Number of online nodes |—
|lastRestarted |Integer |Last restart time since epoch |—
|runningServices |Integer |Number of running services on the Cluster |—
|totalServices |Integer |Total number of services on the Cluster |—
|groupIds |List |List of group IDs that this Cluster belongs to |—
|===

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*401* |Unauthorized user
|*404* |At least one node in the cluster is not responding/ A cluster with that ID or Name was not found/
|*500* |Cluster is down/ Error while listing details for the Cluster
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

*/api/clusters/\{clusterId}/status*

[width="100%",cols="34%,33%,33%",]
|===
a|
*GET*

 a|

===== STATUS

 a|
link:#Clusters-top[To top ↑]

|===

Lists node status for specific Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a cluster |—
|===

===== Using CURL

----
-------------------------------------------- curl --basic -u admin:admin http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/status
----
--------------------------------------------

===== JSON

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

[width="100%",cols="34%,33%,33%",]
|===
a|
*DELETE*

 a|

===== DISBAND

 a|
link:#Clusters-top[To top ↑]

|===

Disbands a specific Server.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |Id of the cluster to be disbanded. Invoke link:#Clusters-listAll[LIST ALL] to obtain it. |—
|===

[cols=",",]
|===
|image:/docs/images/icons/emoticons/warning.png[image] |After disbanding all nodes return to standalone mode. See server API.

|===

===== Using CURL

----
----------------------------------------------- curl --basic -u admin:admin -X DELETE http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724
----
-----------------------------------------------

===== JSON

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*500* |Access Exception/ Some nodes weren't found/ Cluster node exception
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

*/api/clusters/\{clusterId}/restart*

[width="100%",cols="34%,33%,33%",]
|===
a|
*POST*

 a|

===== PERFORM RESTART

 a|
link:#Clusters-top[To top ↑]

|===

Restarts a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a managed cluster |—
|===

===== Using CURL

----
----------------------------------------------------- curl --basic -u admin:admin -X POST http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/restart
----
-----------------------------------------------------

===== JSON

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*401* |Unauthorized user
|*404* |A cluster with that ID or Name was not found
|*500* |Error while restarting the Cluster
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

*/api/clusters/\{clusterId}/stop*

[width="100%",cols="34%,33%,33%",]
|===
a|
*POST*

 a|

===== PERFORM STOP

 a|
link:#Clusters-top[To top ↑]

|===

Stops a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a managed cluster |—
|===

===== Using CURL

----
---------------------------------------------------- curl --basic -u admin:admin -X POST http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/stop  
----
----------------------------------------------------

===== JSON

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*401* |Unauthorized user
|*404* |A cluster with that ID or Name was not found
|*500* |Error while stopping the Cluster
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

== Mule Applications

*/api/clusters/\{clusterId}/applications*

[width="100%",cols="34%,33%,33%",]
|===
a|
*GET*

 a|

===== LIST ALL MULE APPS

 a|
link:#Clusters-top[To top ↑]

|===

Lists all Mule applications currently deployed successfully on a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a cluster |—
|===

===== Using CURL

----
-------------------------------------------------- curl --basic -u admin:admin http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/applications
----
--------------------------------------------------

===== JSON

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|total |Integer |Number of deployed applications on Cluster |—
|data |List |List of deployed applications on Cluster |—
|name |String |Name of the deployed application |data
|status |String |Status of the application (i.e. INITIALISED, STARTED, STOPPED or DISPOSED) |data
|===

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

*/api/clusters/\{clusterId}/applications/\{applicationName}/start*

[width="100%",cols="34%,33%,33%",]
|===
a|
*POST*

 a|

===== PERFORM START MULE APP

 a|
link:#Clusters-top[To top ↑]

|===

Starts an application from a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a managed cluster |—
|applicationName |String |Name of the application to be started |—
|===

===== Using CURL

----
----
----------------- curl --basic -u admin:admin -X POST http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/applications/mule-example-hello/start
----
----
-----------------

===== JSON

Key

Type

Summary

Child of

total

Integer

Number of started applications

data

List

List of started applications

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*400* |At least one application name must be supplied
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

*/api/clusters/\{clusterId}/applications/\{applicationName}/restart*

[width="100%",cols="34%,33%,33%",]
|===
a|
*POST*

 a|

===== PERFORM RESTART MULE APP

 a|
link:#Clusters-top[To top ↑]

|===

Restarts an application from a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a managed cluster |—
|applicationName |String |Name of the application to be started |—
|===

===== Using CURL

----
----
------------------- curl --basic -u admin:admin -X POST http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/applications/mule-example-hello/restart
----
----
-------------------

===== JSON

Key

Type

Summary

Child of

total

Integer

Number of started applications

data

List

List of restarted applications

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*400* |At least one application name must be supplied
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

*/api/clusters/\{clusterId}/applications/\{applicationName}/stop*

[width="100%",cols="34%,33%,33%",]
|===
a|
*POST*

 a|

===== PERFORM STOP MULE APP

 a|
link:#Clusters-top[To top ↑]

|===

Stops an application from a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a managed cluster |—
|applicationName |String |Name of the application to be started |—
|===

===== Using CURL

----
----
---------------- curl --basic -u admin:admin -X POST http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/applications/mule-example-hello/stop
----
----
----------------

===== JSON

Key

Type

Summary

Child of

total

Integer

Number of started applications

data

List

List of stopped applications

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*400* |At least one application name must be supplied
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

== Cluster Flows

*/api/clusters/\{clusterId}/flows*

[width="100%",cols="34%,33%,33%",]
|===
a|
*GET*

 a|

===== LIST ALL FLOWS

 a|
link:#Clusters-top[To top ↑]

|===

Lists all available flows belonging to Mule applications currently deployed successfully on a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a cluster |—
|refreshStats |Boolean |(Optional) Forces refresh of cluster stats |—
|===

===== Using CURL

----
------------------------------------------- curl --basic -u admin:admin http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/flows
----
-------------------------------------------

===== JSON

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|total |Integer |Number of available flows detected on the specified Cluster |—
|data |Array |List of available flows detected on the specified Cluster |—
|id |String |ID of the flow |data
|type |String |The type of the flow (e.g. a service or a simple flow) |data
|status |String |Status of the flow (i.e. RUNNING, STOPPING, PAUSED, STOPPED) |data
|asyncEventsReceived |Integer |Number of asynchronous events received |data
|executionErrors |Integer |Number of execution errors |data
|fatalErrors |Integer |Number of fatal errors |data
|inboundEndpoints |Array |List of all inbound endpoints belonging to the flow. Information about inbound endpoint includes protocol, host and port (if applicable), or flow name. Example: vm://greeter |data
|syncEventsReceived |Integer |Number of synchronous events received |data
|totalEventsReceived |Integer |The total number of messages received by the flow |data
|serverId |String |ID of a Cluster |data
|auditStatus |String |If audit status permits, the agent audits each call to the message. Default value: "DISABLED". Possible values: "CAPTURING", "PAUSED", "DISABLED", "FULL" |data
|flowId |Array |Details that make a flow unique |data
|name |String |Flow name. When used as part a url, if there are spaces present, these are replaced by "%20" |flowId
|fullName |String |Full name of the flow |flowId
|application |String |The name of the application using the flow |flowId
|definedInApplication |Boolean |If false, then flow is executed as part of an embeded Mule instance |flowId
|favorite |Boolean |True if the flow is identified as favorite flow |data
|processedEvents |Integer |Number of messages processed by the flow |data
|totalProcessingTime |Integer |The total amount of time in seconds that the flow takes to process all messages |data
|maxProcessingTime |Integer |The maximum time in seconds that the flow takes to process a message |data
|minProcessingTime |Integer |The minimum time in seconds that the flow takes to process a message |data
|averageProcessingTime |Integer |The average amount of time in seconds that the flow takes to process a message |data
|===

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*404* |The specified server is currently down
|*500* |Error while listing flows
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

*/api/clusters/\{clusterId}/\{flowName}/\{applicationName}/start*

[width="100%",cols="34%,33%,33%",]
|===
a|
*POST*

 a|

===== PERFORM FLOW START

 a|
link:#Clusters-top[To top ↑]

|===

Restarts a flow of an application on a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a managed cluster |—
|flowName |String |Name of the flow |—
|applicationName |String |Name of the application to which the flow belongs to |—
|===

===== Using CURL

----
----
------------------- curl --basic -u admin:admin -X POST http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/flows/ChitChat/mule-example-hello/start
----
----
-------------------

===== JSON

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*500* |Error while starting the flow
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

*/api/clusters/\{clusterId}/\{flowName}/\{applicationName}/pause*

[width="100%",cols="34%,33%,33%",]
|===
a|
*POST*

 a|

===== PERFORM FLOW PAUSE

 a|
link:#Clusters-top[To top ↑]

|===

Pauses a flow of an application on a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a managed cluster |—
|flowName |String |Name of the flow |—
|applicationName |String |Name of the application to which the flow belongs to |—
|===

===== Using CURL

----
----
------------------- curl --basic -u admin:admin -X POST http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/flows/ChitChat/mule-example-hello/pause
----
----
-------------------

===== JSON

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*500* |Error while pausing the flow
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

*/api/clusters/\{clusterId}/\{flowName}/\{applicationName}/stop*

[width="100%",cols="34%,33%,33%",]
|===
a|
*POST*

 a|

===== PERFORM FLOW STOP

 a|
link:#Clusters-top[To top ↑]

|===

Stops a flow of an application on a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a managed cluster |—
|flowName |String |Name of the flow |—
|applicationName |String |Name of the application to which the flow belongs to |—
|===

===== Using CURL

----
----
------------------ curl --basic -u admin:admin -X POST http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/flows/ChitChat/mule-example-hello/stop
----
----
------------------

===== JSON

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*500* |Error while stopping the flow
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

== Cluster Flow Endpoints

*/api/clusters/\{clusterId}/flows/\{flowName}/\{applicationName}/endpoints*

[width="100%",cols="34%,33%,33%",]
|===
a|
*GET*

 a|

===== LIST ALL FLOW ENDPOINTS

 a|
link:#Clusters-top[To top ↑]

|===

Lists all Flow Endpoints from a Mule application on a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a cluster |—
|flowName |String |Name of the Flow |—
|applicationName |String |Name of the application |—
|===

===== Using CURL

----
----
--------------- curl --basic -u admin:admin http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/flows/ChitChat/mule-example-hello/endpoints
----
----
---------------

===== JSON

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|total |Integer |Number of endpoints detected |—
|data |List |List of endpoints details |—
|address |String |Address of the endpoint (e.g. "system.out", "http://localhost:8888", etc) |data
|id |String |Endpoint ID |data
|type |String |Endpoint type (e.g. VM) |data
|status |String |Status of the endpoint (e.g. started, stopped) |data
|connector |String |Connector name |data
|routedMessages |Integer |Number of routed messages |data
|synchronous |Boolean |True if the endpoint is synchronous |data
|filtered |Boolean |True if the endpoint is filtered |data
|tx |Boolean |True if the endpoint handles transactions |data
|===

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*404* |The specified flow doesn't exist
|*500* |Error while getting endpoints
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

*/api/clusters/\{clusterId}/flows/\{flowName}/\{applicationName}/endpoints/\{endpointId}/start*

[width="100%",cols="34%,33%,33%",]
|===
a|
*POST*

 a|

===== PERFORM FLOW ENDPOINT START

 a|
link:#Clusters-top[To top ↑]

|===

Starts a flow endpoint belonging to an application on a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a managed cluster |—
|flowName |String |Name of the flow |—
|applicationName |String |Name of the application to which the flow belongs to |—
|endpointId |String |ID of the endpoint |—
|===

===== Using CURL

----
----
----------------------------------------------------- curl --basic -u admin:admin -X POST http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/flows/ChitChat/mule-example-hello/endpoints/endpoint.vm.chitchatter/start
----
----
-----------------------------------------------------

===== JSON

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*404* |The flow does not exist
|*500* |Error while starting the endpoint
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===

*/api/clusters/\{clusterId}/flows/\{flowName}/\{applicationName}/endpoints/\{endpointId}/stop*

[width="100%",cols="34%,33%,33%",]
|===
a|
*POST*

 a|

===== PERFORM FLOW ENDPOINT STOP

 a|
link:#Clusters-top[To top ↑]

|===

Stops a flow endpoint belonging to an application on a Cluster.

===== SYNTAX

[width="100%",cols="25%,25%,25%,25%",options="header",]
|===
|Key |Type |Summary |Child of
|clusterId |String |ID of a managed cluster |—
|flowName |String |Name of the flow |—
|applicationName |String |Name of the application to which the flow belongs to |—
|endpointId |String |ID of the endpoint |—
|===

===== Using CURL

----
----
---------------------------------------------------- curl --basic -u admin:admin -X POST http://localhost:8080/mmc/api/clusters/cf1fc78b-23a1-491e-93d1-6cc2819c4724/flows/ChitChat/mule-example-hello/endpoints/endpoint.vm.chitchatter/stop
----
----
----------------------------------------------------

===== JSON

[width="100%",cols="50%,50%",]
|===
|*200* |The operation was successful
|*404* |The flow does not exist
|*500* |Error while starting the endpoint
|===

[width="100%",cols="50%,50%",]
|===
|From |3.2.2
|===
